Automatization of the process of compiling chrome scripts written in typescript

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -15,5 +15,11 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://*.youtube.com/*"],
+      "js": ["scripts/autoToggle.js"]
+    }
+  ]
 }
